# Selfcare-Toolkit-AI-Agent

./: .gitignore  README.md
backend/: .gitignore  README.md  actions.py  agent_suggestions.py  calendar_journal.py  calendar_service.py  main.py  mcp_agent.py  prompts.py  requirements.txt  user_memory.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionFeedback.jsx  Dashboard.jsx  Landing.jsx  Loading.jsx  Login.jsx  Navbar.jsx  Quiz.jsx  Results.jsx  SignUp.jsx  Welcome.jsx
frontend/src/firebase/: config.js
frontend/src/utils/: userMemory.js
selfcare-mcp-agent/: README.md  main.py  pyproject.toml
selfcare-mcp-agent/mcp-server/: selfcare_mcp.py
